<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.ContactoActivity">



<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lbFormuladrio"
    android:textSize="@dimen/lbTitle"
    android:textColor="@color/colorAccent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"/>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hint_nombre_completo"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tvMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/hint_Mensaje"/>
        </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_margin="@dimen/activity_vertical_margin">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnEnviarComentario"
                android:id="@+id/btnEnviarComentario"
                android:theme="@style/MiBotton" />
        </LinearLayout>





</LinearLayout>
